Fix app icon not showing in headerbars

--- a/gtk-3.20/gtk.css
+++ b/gtk-3.20/gtk.css
@@ -4727,10 +4727,7 @@ button.titlebutton {
   background-position: center;
   min-height: 32px;
   padding: 0 3px;
-  box-shadow: none;
-  background-image: -gtk-scaled(url("../assets/maximize.png"), url("../assets/max@2.png")); }
-  button.titlebutton:hover, button.titlebutton:active {
-    background-image: -gtk-scaled(url("../assets/maximize_prelight.png"), url("../assets/max_prelight@2.png")); }
+  box-shadow: none; }
   button.titlebutton.close {
     background-image: -gtk-scaled(url("../assets/close.png"), url("../assets/close@2.png")); }
     button.titlebutton.close:hover, button.titlebutton.close:active {
